Fix openshift version to 0.4.3

--- a/playbooks/common/openshift-cluster/set_master_launch_facts_tasks.yml
+++ b/playbooks/common/openshift-cluster/set_master_launch_facts_tasks.yml
@@ -1,11 +1,26 @@
 ---
 - set_fact: k8s_type="master"
 
-- name: Generate master instance names(s)
+# Dirty hacks to work around the fact that the first task is skipped when with_sequence count==1. Why ???
+- name: Generate master instance names
   set_fact:
     scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ '%05x' | format(1048576 | random) }}"
   register: master_names_output
   with_sequence: start=1 end={{ num_masters }}
+  when: num_masters|int > 1
+
+- name: Generate master instance name
+  set_fact:
+    scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ '%05x' | format(1048576 | random) }}"
+  register: master_names_output
+  when: num_masters|int == 1
 
 - set_fact:
     master_names: "{{ master_names_output.results | oo_collect('ansible_facts') | oo_collect('scratch_name') }}"
+  when: num_masters|int > 1
+
+- debug: msg="val - {{ master_names_output }}"
+
+- set_fact:
+    master_names: "{{ master_names_output['ansible_facts']['scratch_name'] }}"
+  when: num_masters|int == 1
