--- a/playbooks/os/openshift-cluster/vars.yml
+++ b/playbooks/os/openshift-cluster/vars.yml
@@ -3,10 +3,11 @@ openstack_network_prefix: 'openshift-ansible-{{ cluster_id }}'
 openstack_network_cidr: 192.168.{{ 1048576 | random % 256 }}.0/24
 openstack_network_external_net: external
 openstack_network_dns:
-  - 8.8.8.8
-  - 8.8.4.4
+  - 172.16.50.210
+  - 172.16.50.250 
 openstack_ssh_keypair: "Rbox_UHA"
 openstack_flavor_ram: 4096
+openshift_version: 0.4.3
 
 deployment_vars:
   origin:
