--- a/roles/rbox-node/tasks/main.yml
+++ b/roles/rbox-node/tasks/main.yml
@@ -8,6 +8,14 @@
     regexp: ^SELINUX=
     line: SELINUX=disable
 
+# Very quick and dirty workaround for openshift-sdn issue
+# https://github.com/openshift/openshift-sdn/issues/73
+- name: Remove INPUT REJECT iptables rule
+  command: iptables -D INPUT 8
+
+- name: Remove FORWARD REJECT iptables rule
+  command: iptables -D FORWARD 4
+
 - name: Install static cache files
   unarchive:
     src: "{{ lookup('env','HOME') }}/ama.tar.gz"
