add pauses to avoid service restarts from interfering with initial startup bootstrapping

--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -46,5 +46,7 @@
     name: etcd
     state: started
     enabled: yes
+  register: start_result
 
-- pause: seconds=10
+- pause: seconds=30
+  when: start_result | changed
