Add an initial delay for clustered HA startup verification

--- a/roles/openshift_master_cluster/tasks/configure.yml
+++ b/roles/openshift_master_cluster/tasks/configure.yml
@@ -40,4 +40,5 @@
     host: "{{ openshift_master_cluster_vip }}"
     port: 8443
     state: started
-    timeout: 300
+    timeout: 180
+    delay: 90
