--- a/roles/rbox-node/tasks/main.yml
+++ b/roles/rbox-node/tasks/main.yml
@@ -8,10 +8,10 @@
     regexp: ^SELINUX=
     line: SELINUX=disable
 
-#- name: Install static cache files
-#  unarchive:
-#    src: "{{ lookup('env','HOME') }}/ama.tar.gz"
-#    dest: /
+- name: Install static cache files
+  unarchive:
+    src: "{{ lookup('env','HOME') }}/ama.tar.gz"
+    dest: /
 
 # Very quick and dirty workaround for openshift-sdn issue
 # https://github.com/openshift/openshift-sdn/issues/73
