Add a pause after node startup to prevent restart handler from interfering with sdn configuration

--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -71,3 +71,8 @@
 
 - name: Start and enable openshift-node
   service: name=openshift-node enabled=yes state=started
+  register: start_result
+
+- name: pause to prevent service restart from interfering with bootstrapping
+  pause: seconds=30
+  when: start_result | changed
