--- a/playbooks/os/couchbase-cluster/vars.yml
+++ b/playbooks/os/couchbase-cluster/vars.yml
@@ -1,4 +1,11 @@
 ---
+
+# Variables for couchbase
+# depending on type of VM
+# m1.xlarge : 16GB RAM = 16384 MB RAM
+#               160GB disk
+ram_per_server: 16384
+
 openstack_network_prefix: 'openshift-ansible-{{ cluster_id }}'
 openstack_network_cidr: 192.168.{{ 1048576 | random % 256 }}.0/24
 openstack_network_external_net: external
@@ -6,33 +13,13 @@ openstack_network_dns:
   - 172.16.50.210
   - 172.16.50.250 
 openstack_ssh_keypair: "Rbox_UHA"
-openstack_flavor_ram: 4096
+openstack_flavor_ram: "{{ ram_per_server }}"
 openshift_version: 0.4.3
 
 deployment_vars:
   origin:
     image:
-#      url: "http://cloud.centos.org/centos/7/images/CentOS-7-x86_64-GenericCloud.qcow2"
-#      name: CentOS-7-x86_64-GenericCloud.qcow2
-#      name: CentOS-7-x86_64-GenericCloud.openshift-gtf-2.raw
-#      name: centos-70-raw
       name: centos-70-utd
-#      name: CentOS-7-x86_64-GenericCloud.raw
-#      sha256: e324e3ab1d24a1bbf035ddb365e7f9058c0b454acf48d7aa15c5519fae5998ab
     ssh_user: openshift
     ansible_ssh_private_key_file: /home/john/.ssh/rbox_uha.pem 
-    sudo: yes
-  online:
-    image:
-      url:
-      name:
-      sha256:
-    ssh_user: root
-    sudo: no
-  enterprise:
-    image:
-      url:
-      name:
-      sha256:
-    ssh_user: openshift
     sudo: yes
